# python-project-50

./: .coverage  .gitignore  README.md  pyproject.toml
gendiff/: form_tree.py  formatter.py  gendiff.py  gendiff_result.py  parser.py  read_files.py  tree.py
gendiff/formatters/: format_gendiff.py  format_json.py  format_plain.py  format_stylish.py
gendiff/scripts/: __init__.py  diff.py  gendiff.py  hh.py  snake.py
gendiff_1/: gendiff_2.py
gendiff_1/scripts/: gendiff.py
tests/: fixtures.py  test_gendiff.py  test_json.py
tests/fixtures/: fixtures.py  test_format_json.json
tests/fixtures/standarts/: plain_standart.py  stylish_standart.py
tests/test_files/: test_format_json.json
