[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["gamid <kalldrek@yandex.ru>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.8.1"
pyyaml = "^6.0"


[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
